Start tomcat with JAVA OPTS
Envisage to externalize them in the future